Major Fixes - Didn't know this thing was so broken

--- a/PanOSMain/MainWindow.xaml
+++ b/PanOSMain/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:PanOSMain"
         mc:Ignorable="d"
         Title="MainWindow" Height="504" Width="481"
-        AllowsTransparency="True" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" MouseMove="Window_MouseMove" MouseLeftButtonUp="Window_MouseLeftButtonUp">
+        AllowsTransparency="True" WindowStyle="None" MouseLeftButtonDown="Window_MouseLeftButtonDown" MouseMove="Window_MouseMove" MouseLeftButtonUp="Window_MouseLeftButtonUp" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Window.Background>
         <ImageBrush ImageSource="/PanOS no bg.png"/>
     </Window.Background>
